# whaleroute

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
cmake/: whalerouteConfig.cmake.in
include/whaleroute/: irequestprocessorqueue.h  irequestrouter.h  requestprocessor.h  requestprocessorqueue.h  requestrouter.h  route.h  routematcher.h  routematcherinvoker.h  routespecification.h  stringconverter.h  types.h  utils.h
include/whaleroute/detail/: emptytype.h  functionrequestprocessor.h  irequestprocessor.h  irequestrouter.h  requestprocessor.h  requestprocessor_utils.h  requestprocessorinstancer.h  requestprocessorqueue.h  requestprocessorqueue_impl.h  requestprocessorset.h  route.h  routematcherinvoker.h  routerequesttype.h  routespecification.h  routespecifier.h  utils.h
tests/: CMakeLists.txt  common.h  router_without_processor_and_request_type_and_response_value.cpp  router_without_processor_and_response_value.cpp  router_without_response_value.cpp  test_access.cpp  test_alt_regex_specifying.cpp  test_multiple_route_matchers.cpp  test_multiple_route_specifiers.cpp  test_multirouter.cpp  test_response_value_arguments.cpp  test_router.cpp  test_router_alt_request_processor.cpp  test_router_without_processor.cpp  test_router_without_processor_and_request_type.cpp  test_router_without_processor_and_request_type_and_response_value.cpp  test_router_without_processor_and_response_value.cpp  test_router_without_request_type.cpp  test_router_without_request_type_and_response_value.cpp  test_router_without_response_value.cpp  test_router_without_route_context.cpp  test_router_without_route_matchers.cpp  test_router_without_route_matchers_and_response_value.cpp  test_router_without_route_specifiers.cpp  test_router_without_route_specifiers_and_response_value.cpp
